<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_titulo">Gasolina x Etanol</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso_desejado">Nome Do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_de_contado">Telefone de Contado</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
    <string name="txt_selecione_um_curso">Selecione um Curso</string>
</resources>